# medreview_chat

./: .coverage  .coverage.claude.pid418.X5J6bfqx.Hv5CUMHdoeYh  .dockerignore  .env.example  .gitignore  ANALISE_TECNICA_CRIATONS.md  Dockerfile  PLANO_REFATORACAO.md  PROMPT_BACKLOG_SISTEMA.md  Procfile  README.md  check-task-closi-ai.skill  check-task-miagi-control.skill  create-task-closi-ai.skill  create-task-miagi-control.skill  create-task.skill  guia-deploy-railway.docx  gunicorn.conf.py  postman.json  pyproject.toml  railway.toml  requirements.txt  resumo-criatons.md  run_local.py  start.sh  supabase_schema.sql  ziIkggeq
.claude/: settings.local.json
agents/sales/: agent.py
botmaker_pipeline/: GUIA_USO.md  botmaker_analyzer.py  botmaker_extractor.py
core/: config.py  database.py  escalation.py  followup.py  hubspot.py  llm.py  log_buffer.py  logger.py  memory.py  message_splitter.py  metrics.py  whatsapp.py
dashboard/: blueprint.py
dashboard/templates/: chameleon.html
data/: ambassadors.json  commercial_rules.json  competitors.json  conversion_bible.json  corrections.json  finalization.json  objections.json  offers.json  product_info.json  residencia_provas.json  sales_techniques.md  suporte_alunos.json
docs/: api-reference.md  architecture.md  botmaker-integration-guide.md  botmaker-integration.js  mensagem-dev-medreview.md
docs/archives/: ANALISE_MEMORIA_CLOSI_AI.md  ARQUITETURA_TESTES.md  PLANO_REFATORACAO.md  PROMPT_BACKLOG_SISTEMA.md  PROMPT_TESTES_4_ETAPAS.md
migrations/: 001_fase1_sessions_and_conversations.sql  002_fase2_lead_metadata_and_escalations.sql  002_wild_memory_schema.sql  003_fase4_corrections.sql  004_fase5_analytics_indexes.sql  005_backlog_items.sql  006_system_logs.sql  007_llm_usage.sql  008_fix_backlog_rice.sql  009_add_priority_and_agent.sql
sandbox/: app.py
sandbox/templates/: base.html  chat.html
src/: __init__.py  app.py  config.py
src/agent/: sales_agent.py
tests/: conftest.py  runner.py  test_metrics.py  test_phase2_shadow.py  test_phase3_context.py  test_security.py  test_security_flows.py  test_wild_memory_setup.py
(+95 files in other folders)
