[project]
name = "closi-ai"
version = "1.0.0"
description = "Agente autônomo de vendas via WhatsApp para MedReview"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.50.0",
    "flask>=3.0.0",
    "gunicorn>=21.0.0",
    "httpx>=0.24.0",
    "supabase>=2.3.0",
    "gevent>=23.9.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-flask>=1.3",
    "pytest-mock>=3.14",
    "pytest-xdist>=3.5",
    "responses>=0.25",
    "ruff>=0.4.0",
    "coverage[toml]>=7.4",
    "pytest-json-report>=1.5",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "critical: Testes de bugs criticos (race conditions, perda de dados)",
    "slow: Testes que demoram > 5 segundos",
    "integration: Testes com mocks de servicos externos",
    "e2e: Testes end-to-end (fluxo completo)",
    "load: Testes de carga/stress",
    "dashboard: Testes do dashboard de testes",
]
filterwarnings = ["ignore::DeprecationWarning"]
addopts = "-v --tb=short --strict-markers"

[tool.coverage.run]
source = ["src", "wild_memory"]
omit = ["*/tests/*", "*/__pycache__/*", "*/migrations/*"]

[tool.coverage.report]
fail_under = 50
show_missing = true
exclude_lines = ["pragma: no cover", "if __name__", "pass"]
